--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,23 @@
 {
   "name": "Viva Estudio Cotizador",
   "short_name": "VivaEstudio",
-  "description": "Herramienta de cotización profesional para Viva Estudio",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#f8fafb",
+  "background_color": "#ffffff",
   "theme_color": "#000000",
-  "orientation": "portrait",
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "VIVAICONO.PNG",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "VIVAICONO.PNG",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
