--- a/manifest.json
+++ b/manifest.json
@@ -8,16 +8,17 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "VIVAICONO.PNG",
+      "src": "VIVAICONO.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "VIVAICONO.PNG",
+      "src": "VIVAICONO.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     }
   ]
 }
+
